# AI-stress-tests

1/: ChatGPT-5-2-thinking.cpp  DeepSeek-3-2-thinking.cpp  Gemini-3-pro.cpp  Grok4-1-expert.cpp  Result.md  prompt.md
2/: ChatGPT-5-2-Thinking.cpp  DeepSeek-3-2.cpp  Gemini-3-pro.cpp  Grok-4-1-Expert.cpp  Prompt.md
2/opus4-6/: CMakeLists.txt  event_horizon.hpp  main.cpp
